<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bg_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/help"
            style="@style/menu_btn"
            android:text="@string/help" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/menu_tv" />

        <Button
            android:id="@+id/cancel"
            style="@style/menu_btn"
            android:text="@string/cancel_login" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/menu_tv" />

        <Button
            android:id="@+id/exit"
            style="@style/menu_btn"
            android:text="@string/exit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/menu_tv" />

        <Button
            android:id="@+id/about"
            style="@style/menu_btn"
            android:text="@string/about" />
    </LinearLayout>

</RelativeLayout>