<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result_lin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/android_home"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/radio_toptitle_shape" >

        <Button
            android:id="@+id/btn_result_menu"
            style="@style/btn_menu" />

        <TextView
            android:id="@+id/result_title"
            style="@style/title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color2" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_bg_shape"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                style="@style/androidtest_title_tv"
                android:text="@string/single_topic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/radio_shape"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/topic_num" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/present_choice" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/right_wrong" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/result" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/score" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/result_line_tv" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/topic_num1" />

                    <TextView
                        android:id="@+id/present1"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/right_wrong1"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/result1"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/score1"
                        style="@style/result_trem_tv" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/topic_num2" />

                    <TextView
                        android:id="@+id/present2"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/right_wrong2"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/result2"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/score2"
                        style="@style/result_trem_tv" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/topic_num3" />

                    <TextView
                        android:id="@+id/present3"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/right_wrong3"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/result3"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/score3"
                        style="@style/result_trem_tv" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/androidtest_title_tv"
                android:layout_marginTop="15dp"
                android:text="@string/more_topic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/radio_shape"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/topic_num" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/present_choice" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/right_wrong" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/result" />

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/score" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/result_line_tv" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/topic_num1" />

                    <TextView
                        android:id="@+id/present4"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/right_wrong4"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/result4"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/score4"
                        style="@style/result_trem_tv" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <TextView
                        style="@style/result_trem_tv"
                        android:text="@string/topic_num2" />

                    <TextView
                        android:id="@+id/present5"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/right_wrong5"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/result5"
                        style="@style/result_trem_tv" />

                    <TextView
                        android:id="@+id/score5"
                        style="@style/result_trem_tv" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/radio_title_shape"
                android:orientation="horizontal"
                android:padding="8dp" >

                <TextView
                    style="@style/result_tv"
                    android:text="@string/total_score" />

                <TextView
                    android:id="@+id/total_score"
                    style="@style/result_tv" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/show_result"
                    style="@style/result_button"
                    android:text="@string/show_result" />

                <Button
                    android:id="@+id/one_again"
                    style="@style/result_button"
                    android:text="@string/one_again" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>